# cmake

./: .gitignore  CMakeLists.txt  config.h.in  main.cpp
include/: config.h  multi.h
mathdir/: CMakeLists.txt  add.cpp  table.cpp
